--- a/packages.config
+++ b/packages.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.3.1" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.6.1" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="2.9.8" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="3.4.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="3.4.0" targetFramework="net472" />
+  <package id="MySql.Data" version="8.0.19" targetFramework="net472" />
+  <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.7.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
