--- a/SCTBuilder.csproj
+++ b/SCTBuilder.csproj
@@ -164,6 +164,7 @@
     <Compile Include="DrawLabels.Designer.cs">
       <DependentUpon>DrawLabels.cs</DependentUpon>
     </Compile>
+    <Compile Include="ESEoutput.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -187,6 +188,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadNASR.cs" />
+    <Compile Include="ReadNaviGraph.cs" />
     <Compile Include="XML2SCT.cs">
       <SubType>Form</SubType>
     </Compile>
