--- a/packages.config
+++ b/packages.config
@@ -1,11 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.3.1" targetFramework="net472" />
+  <package id="DeltaCompressionDotNet" version="1.1.0" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="2.9.8" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="3.4.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="3.4.0" targetFramework="net472" />
+  <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.19" targetFramework="net472" />
+  <package id="SharpCompress" version="0.17.1" targetFramework="net472" />
+  <package id="Splat" version="1.6.2" targetFramework="net472" />
+  <package id="squirrel.windows" version="1.9.1" targetFramework="net472" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.7.0" targetFramework="net472" />
