--- a/SCTBuilder.csproj
+++ b/SCTBuilder.csproj
@@ -230,6 +230,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadNASR.cs" />
     <Compile Include="ReadNaviGraph.cs" />
+    <Compile Include="SelectAIRAC.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SelectAIRAC.Designer.cs">
+      <DependentUpon>SelectAIRAC.cs</DependentUpon>
+    </Compile>
     <Compile Include="XML2SCT.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -275,6 +281,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SelectAIRAC.resx">
+      <DependentUpon>SelectAIRAC.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="XML2SCT.resx">
       <DependentUpon>XML2SCT.cs</DependentUpon>
     </EmbeddedResource>
