Enhancements: SID/STAR files individually generated, much faster.  Structure for Alt and Speed added, not implemented. NaviGraph now reads correctly. Added selection capability to SID STAR gridviews.   Improved menu bar capability.

--- a/SCTBuilder.csproj
+++ b/SCTBuilder.csproj
@@ -283,6 +283,7 @@
     <EmbeddedResource Include="XML2SCT.resx">
       <DependentUpon>XML2SCT.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\DataSources\FilterBy.datasource" />
