--- a/SCTBuilder.csproj
+++ b/SCTBuilder.csproj
@@ -228,10 +228,24 @@
     <Compile Include="LineGenerator.Designer.cs">
       <DependentUpon>LineGenerator.cs</DependentUpon>
     </Compile>
+    <Compile Include="POFmanager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="POFmanager.Designer.cs">
+      <DependentUpon>POFmanager.cs</DependentUpon>
+    </Compile>
+    <Compile Include="POFoutput.cs" />
+    <Compile Include="Preferences.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Preferences.Designer.cs">
+      <DependentUpon>Preferences.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadNASR.cs" />
     <Compile Include="ReadNaviGraph.cs" />
+    <Compile Include="ReadPOF.cs" />
     <Compile Include="SelectAIRAC.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -281,6 +295,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="LineGenerator.resx">
       <DependentUpon>LineGenerator.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="POFmanager.resx">
+      <DependentUpon>POFmanager.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Preferences.resx">
+      <DependentUpon>Preferences.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
