--- a/SCTBuilder.csproj
+++ b/SCTBuilder.csproj
@@ -215,6 +215,12 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Hershey.cs" />
+    <Compile Include="HoldingPattern.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HoldingPattern.Designer.cs">
+      <DependentUpon>HoldingPattern.cs</DependentUpon>
+    </Compile>
     <Compile Include="LatLongCalc.cs" />
     <Compile Include="LatLongHelp.cs">
       <SubType>Form</SubType>
@@ -290,6 +296,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HoldingPattern.resx">
+      <DependentUpon>HoldingPattern.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LatLongHelp.resx">
       <DependentUpon>LatLongHelp.cs</DependentUpon>
