--- a/SCTBuilder.csproj
+++ b/SCTBuilder.csproj
@@ -215,12 +215,6 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Hershey.cs" />
-    <Compile Include="HoldingPattern.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="HoldingPattern.Designer.cs">
-      <DependentUpon>HoldingPattern.cs</DependentUpon>
-    </Compile>
     <Compile Include="LatLongCalc.cs" />
     <Compile Include="LatLongHelp.cs">
       <SubType>Form</SubType>
@@ -250,6 +244,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Racetrack.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Racetrack.Designer.cs">
+      <DependentUpon>Racetrack.cs</DependentUpon>
+    </Compile>
     <Compile Include="ReadNASR.cs" />
     <Compile Include="ReadNaviGraph.cs" />
     <Compile Include="ReadPOF.cs" />
@@ -297,9 +297,6 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="HoldingPattern.resx">
-      <DependentUpon>HoldingPattern.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="LatLongHelp.resx">
       <DependentUpon>LatLongHelp.cs</DependentUpon>
     </EmbeddedResource>
@@ -322,6 +319,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Racetrack.resx">
+      <DependentUpon>Racetrack.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SelectAIRAC.resx">
       <DependentUpon>SelectAIRAC.cs</DependentUpon>
     </EmbeddedResource>
