--- a/SCTBuilder.csproj
+++ b/SCTBuilder.csproj
@@ -194,13 +194,19 @@
     <Compile Include="ArcGenerator.Designer.cs">
       <DependentUpon>ArcGenerator.cs</DependentUpon>
     </Compile>
-    <Compile Include="CycleInfo.cs" />
-    <Compile Include="DMS_DecDeg.cs">
+    <Compile Include="CoordConverter.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DMS_DecDeg.Designer.cs">
-      <DependentUpon>DMS_DecDeg.cs</DependentUpon>
+    <Compile Include="CoordConverter.Designer.cs">
+      <DependentUpon>CoordConverter.cs</DependentUpon>
     </Compile>
+    <Compile Include="CoordConverterHelp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CoordConverterHelp.Designer.cs">
+      <DependentUpon>CoordConverterHelp.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CycleInfo.cs" />
     <Compile Include="DrawLabels.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -288,8 +294,11 @@
     <EmbeddedResource Include="ArcGenerator.resx">
       <DependentUpon>ArcGenerator.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DMS_DecDeg.resx">
-      <DependentUpon>DMS_DecDeg.cs</DependentUpon>
+    <EmbeddedResource Include="CoordConverter.resx">
+      <DependentUpon>CoordConverter.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CoordConverterHelp.resx">
+      <DependentUpon>CoordConverterHelp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DrawLabels.resx">
       <DependentUpon>DrawLabels.cs</DependentUpon>
